# fire-framework

./: .gitignore  README.md  TODO.md  a.txt  fire-framework-lib.sln
ao-and-phong-demo/: ao-and-phong-demo.vcxproj  stanford.obj.ao
cubemap-sh-demo/: cubemap-sh-demo.vcxproj
demos/: AOvsPhong.cpp  CubemapSH.cpp  FireDemo.cpp  FireForces.cpp  FireLighting.cpp  LightDemo.cpp  Main.cpp  PRTRotLight.cpp  PhongFire.cpp  SHFire.cpp  SHPlotDemo.cpp  SHRotationTest.cpp
fire-demo/: fire-demo.vcxproj
fire-forces-demo/: fire-forces-demo.vcxproj
fire-framework-lib/: fire-framework-lib.vcxproj
fire-lighting-demo/: fire-lighting-demo.vcxproj
fire-phong-demo/: BlinnPhong.glsl  ProceduralFire.glsl  ScrollTexFire.glsl  Sparks.glsl  fire-phong-demo.vcxproj
fire-sh-demo/: fire-sh-demo.vcxproj
licenses/: SOIL.txt  webgl-noise.txt
light-demo/: light-demo.vcxproj
models/: stanfordCeramic.ao  teapot.blend  teapot.blend1  teapotfine.blend
prt-rotate-demo/: prt-rotate-demo.vcxproj
rotation-test-demo/: SpherePlot.glsl  rotation-test-demo.vcxproj
sh-plot-demo/: sh-plot-demo.vcxproj
shaders/: AOBake.glsl  AOSolid.glsl  (+15 more)
src/: AOMesh.cpp  AOMesh.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Element.hpp  GC.hpp  Intersect.cpp  Intersect.hpp  Light.cpp  Light.hpp  LightManager.cpp  LightManager.hpp  Main.cpp  Matrix.hpp  Mesh.cpp  Mesh.hpp  Octree.cpp  Octree.hpp  PRTMesh.cpp  PRTMesh.hpp  Particles.cpp  Particles.hpp  Renderable.cpp  Renderable.hpp  SH.cpp  SH.hpp  SHMat.cpp  SHMat.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  SphereFunc.cpp  SphereFunc.hpp  SpherePlot.cpp  SpherePlot.hpp  Texture.cpp  Texture.hpp  UserInput.cpp  (+1 more)
src/Demos/: SHPlotDemo.cpp  TestSHRot.cpp
src/temp/: AOMesh.cpp  AOMesh.hpp  Mesh.cpp  Mesh.hpp  PRTMesh.cpp  PRTMesh.hpp
(+13 files in other folders)
